// proto/simple-drive.proto
syntax = "proto3";

package simpledrive;

option go_package = "./pb;pb";

// メッセージ定義
message Item {
  string id = 1;
  optional string parent_id = 2;
  string name = 3;
  ItemType type = 4;
  int32 size = 5;
  string created_at = 6;
  string last_modified_at = 7;
  // string minio_object_key = 8;
  reserved 8;
  reserved "minio_object_key";
}

message ItemCreateRequest {
  string name = 1;
  ItemType type = 2;
  optional string parent_id = 3;
  bytes file = 4; // バイナリデータはbytes型で表現
}

message ItemUpdateRequest {
  string parent_id = 2;
  optional string name = 1;
}

message ListItemsRequest {
  optional string parent_id = 1;
  int32 page = 2;
  int32 size = 3;
}

message ListItemsResponse {
  repeated Item items = 1;
  Paging paging = 2;
}

message GetItemRequest {
  string id = 1;
}

message DeleteItemRequest {
  string id = 1;
}

message DeleteItemResponse {
}

message HealthCheckRequest {
}

message HealthCheckResponse {
  string status = 1;
}

message Paging {
  int32 current_page = 1;
  int32 page_size = 2;
  int32 total_items = 3;
  int32 total_pages = 4;
}

enum ItemType {
  FILE = 0;
  DIRECTORY = 1;
}

// サービス定義
service FileManager {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
  rpc CreateItem(ItemCreateRequest) returns (Item);
  rpc GetItem(GetItemRequest) returns (Item);
  rpc UpdateItem(ItemUpdateRequest) returns (Item);
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse);
}
